# DB_7sem

secretholder/: .env  docker-compose.yaml  makefile  migration.py  pyproject.toml  settings.py  sso_server.py  temp.py
secretholder/migrations/: 001.sql  002.sql  003.sql  004.sql  005.sql  006.sql  007.sql  008.sql  009.sql  010.sql
secretholder/src/: app.py  common_utils.py  main.py  settings.py
secretholder/src/api/: __init__.py
secretholder/src/api/v1/: __init__.py  auth.py
secretholder/src/api/v1/teams/: __init__.py  get_team.py  my_teams.py
secretholder/src/dependencies/: auth.py
secretholder/src/interfaces/: repositories.py  services.py
secretholder/src/repositories/: auth.py  teams.py
secretholder/src/schemas/: auth.py
secretholder/src/services/auth/: auth.py  helpers.py
secretholder/src/services/team/: service.py
