[project]
name = "secretholder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.5",
    "httpx>=0.27.2",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "uvicorn>=0.32.0",
]
